@@ -242,8 +242,8 @@ verilog/parser_bugs.v:203: VAR  'var' 'next' 'module' '' 'integer' '' ''
 verilog/parser_bugs.v:204: VAR  'var' 'medal' 'module' '' 'enum' '' ''
 verilog/parser_bugs.v:205: VAR  'var' 'E1' 'module' '' 'enum' '' ''
 verilog/parser_bugs.v:206: VAR  'typedef' 'boolean' 'module' '' 'enum' '' ''
-verilog/parser_bugs.v:207: VAR  'var' 'STATE' 'module' '' 'logic' '' ''
-verilog/parser_bugs.v:207: VAR  'var' 'NSTATE' 'module' '' 'logic' '' ''
+verilog/parser_bugs.v:207: VAR  'var' 'STATE' 'module' '' 'logic [1:0]' '' ''
+verilog/parser_bugs.v:207: VAR  'var' 'NSTATE' 'module' '' 'logic [1:0]' '' ''
 verilog/parser_bugs.v:208: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:210: MODULE  'module' 'invec' undef '0'
 verilog/parser_bugs.v:211: VAR  'port' 'novec' 'module' '' 'logic' '' ''
@@ -806,7 +806,7 @@ verilog/parser_sv.v:224: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:225: VAR  'var' 'foo5' 'class' '' 'static local bit' '[string]' ''
 verilog/parser_sv.v:226: ENDCLASS  'endclass'
 verilog/parser_sv.v:202: CLASS  'class' 'vmm_cl_func_colon' ''
-verilog/parser_sv.v:229: VAR  'typedef' 'restart_e' 'class' '' 'int' '' ''
+verilog/parser_sv.v:229: VAR  'typedef' 'restart_e' 'class' '' 'int unsigned' '' ''
 verilog/parser_sv.v:230: FUNCTION  'function' 'do_all' 'void'
 verilog/parser_sv.v:230: VAR  'port' 'kind' 'function' '' 'vmm_cl_func_colon::restart_e' '' 'vmm_cl_func_colon::FIRM'
 verilog/parser_sv.v:230: PORT  'kind' 'function' 'input' 'vmm_cl_func_colon::restart_e' '' '1'
